[package]
name = "example_7702"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["recovery"] }
alloy-rlp = {version = "0.3.10"}
